# pytest-gevent

./: .pre-commit-config.yaml  README.md  pytest_gevent.py  setup.cfg  tox.ini
tests/: pytest_gevent_test.py
